Config, debug stop endpoint, QoL
